public/css/tex.css
* {
	padding:none;
	margin:0;
	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
	box-sizing: border-box;			/* Opera/IE 8+ */
}

/* Default width of pages */
.header, .content, .footer {
	width:100%;
}

body{
    height:100%;
    min-height:100%;
}

.content {
	height: 78%;
	position: relative;
}

.fill {
	width: 100%;
	height: 100%;
}

.hidden {
	display:none;
}

.vert-bg {
  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#075f87+0,1f779f+100 */
  background: #075f87; /* Old browsers */
  background: -moz-linear-gradient(top,  #075f87 0%, #1f779f 100%); /* FF3.6-15 */
  background: -webkit-linear-gradient(top,  #075f87 0%,#1f779f 100%); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom,  #075f87 0%,#1f779f 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#075f87', endColorstr='#1f779f',GradientType=0 ); /* IE6-9 */
}

.header {
    display: inline-block;
	color: #fff;
  /*
  075F87
  1F779F*/
	/*background: url(https://www.ucsd.edu/common/cwp/active-cherry/img/bg.jpg) repeat-x;*/
	height: 10%;
	text-align: center;
	font-weight:900;
    font-size: 1.5em;
	font-family: sans-serif;
	padding-top: 10px;
    text-shadow: 2px 2px 4px #000000;
}

#ranking-clock{
    margin-top: 0px;
    margin-right: 30px;
}

html
{
    height: 100%;
}


#top-bar{
    text-align: center;
}

#top-bar ul{
    margin:0;
    padding:0;
    overflow:hidden;
    background-color:#333;
    text-align: center;
    list-style: none;
}

#top-bar ul li{
    display: inline-block;
    padding-top: 8px;
    padding-bottom: 8px;
}

#top-bar ul li a{
    color:white;
    text-align: center;
    padding:14px 16px;
    text-decoration: none;
}

#top-bar ul li a:hover {
    background-color: #111;
}

#rank-friends{
    text-align: center;
    list-style-position: inside;
}

#rank-friends li{
    
}
.content .upload.floating-button {
	position: absolute;
	left: 10px;
	bottom: 40px;
	width: 40px;
	height: 40px;
	<!--background-color: #000; -->
    opacity:0.7;
	color: #fff;
}

.content .upload.container {
	position: absolute;
	top: 10%;
	left: 20%;
	width: 60%;
	text-align: center;
	background-color: #fff;
	padding: 5px;
	-webkit-box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.15);
	-moz-box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.15);
	box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.15);
}

.content .upload.container form {
	text-align: left;
}

.content .upload.container form input,
.content .upload.container form button {
	display: inline;
}

div.scroll
{
    width:100%;
    overflow: scroll;
}

#profile-button{
    position:relative;
    right:0;
    left:0;
    margin-right:auto;
    margin-left: auto;
    min-height: 1em;
    background: white;
    margin-top: 5px;
    font-size: 20px;
    vertical-align: middle;
    text-align: center;
    border-radius: 10px;
    border: 2px solid #00BFFF;
    padding: 5px;
    height: auto;
    width: 40%;
    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2);
}

#profile-button:hover{
    background-color:#00BFFF;
}

#profile-button a{
    text-decoration: none;
    color: black;
}

.button {
  position: relative;
  display: inline-block;
  vertical-align: top;
  height: 36px;
  line-height: 35px;
  padding: 0 20px;
  font-size: 13px;
  color: white;
  text-align: center;
  text-decoration: none;
  text-shadow: 0 -1px rgba(0, 0, 0, 0.4);
  background-clip: padding-box;
  border: 1px solid;
  border-radius: 2px;
  cursor: pointer;
  -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.1), inset 0 0 0 1px rgba(255, 255, 255, 0.08), 0 1px 2px rgba(0, 0, 0, 0.25);
  box-shadow: inset 0 1px rgba(255, 255, 255, 0.1), inset 0 0 0 1px rgba(255, 255, 255, 0.08), 0 1px 2px rgba(0, 0, 0, 0.25);
}
.button:before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  pointer-events: none;
  background-image: -webkit-radial-gradient(center top, farthest-corner, rgba(255, 255, 255, 0.08), rgba(255, 255, 255, 0));
  background-image: -moz-radial-gradient(center top, farthest-corner, rgba(255, 255, 255, 0.08), rgba(255, 255, 255, 0));
  background-image: -o-radial-gradient(center top, farthest-corner, rgba(255, 255, 255, 0.08), rgba(255, 255, 255, 0));
  background-image: radial-gradient(center top, farthest-corner, rgba(255, 255, 255, 0.08), rgba(255, 255, 255, 0));
}
.button:hover:before {
  background-image: -webkit-radial-gradient(farthest-corner, rgba(255, 255, 255, 0.18), rgba(255, 255, 255, 0.03));
  background-image: -moz-radial-gradient(farthest-corner, rgba(255, 255, 255, 0.18), rgba(255, 255, 255, 0.03));
  background-image: -o-radial-gradient(farthest-corner, rgba(255, 255, 255, 0.18), rgba(255, 255, 255, 0.03));
  background-image: radial-gradient(farthest-corner, rgba(255, 255, 255, 0.18), rgba(255, 255, 255, 0.03));
}
.button:active {
  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2);
  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2);
}
.button:active:before {
  content: none;
}

.button-green {
  background: #5ca934;
  border-color: #478228 #478228 #3c6f22;
  background-image: -webkit-linear-gradient(top, #69c03b, #5ca934 66%, #54992f);
  background-image: -moz-linear-gradient(top, #69c03b, #5ca934 66%, #54992f);
  background-image: -o-linear-gradient(top, #69c03b, #5ca934 66%, #54992f);
  background-image: linear-gradient(to bottom, #69c03b, #5ca934 66%, #54992f);
}
.button-green:active {
  background: #5ca934;
  border-color: #3c6f22 #478228 #478228;
}

.button-red {
  background: #d5452f;
  border-color: #ae3623 #ae3623 #992f1f;
  background-image: -webkit-linear-gradient(top, #da5c48, #d5452f 66%, #c73d28);
  background-image: -moz-linear-gradient(top, #da5c48, #d5452f 66%, #c73d28);
  background-image: -o-linear-gradient(top, #da5c48, #d5452f 66%, #c73d28);
  background-image: linear-gradient(to bottom, #da5c48, #d5452f 66%, #c73d28);
}
.button-red:active {
  background: #d5452f;
  border-color: #992f1f #ae3623 #ae3623;
}


.controls {
	margin-top: 10px;
	border: 1px solid transparent;
	border-radius: 2px 0 0 2px;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	height: 32px;
	outline: none;
	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
}

#pac-input {
	background-color: #fff;
	font-family: Roboto;
	font-size: 15px;
	font-weight: 300;
	margin-left: 12px;
	padding: 0 11px 0 13px;
	text-overflow: ellipsis;
	width: 200px;
}

#pac-input:focus {
	border-color: #4d90fe;
}

.footer {
	/*background: url(https://www.ucsd.edu/common/cwp/active-cherry/img/bg.jpg) repeat-x;*/
	height: 12%;
	display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-align-content: stretch;
    -ms-flex-line-pack: stretch;
    align-content: stretch;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
}

.footer a.nav-button {
    border-radius: 10px;
  text-align: center;
	-webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    -webkit-align-self: auto;
    -ms-flex-item-align: auto;
    align-self: auto;
}

.footer a.nav-button:hover {
	background:#191970; /* For browsers that do not support gradients */
    background: -webkit-linear-gradient(#0000CD, black); /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(#191970, black); /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(#191970, black); /* For Firefox 3.6 to 15 */
    background: linear-gradient(#0000CD, #4B0082); /* Standard syntax (must be last) */
}

